# ParallelMethods

./: CMakeLists.txt  Tests.cpp  main.cpp
Solvers/: CGM_MPI.cpp  CGM_MPI.h  Functions.cpp  Functions.h
Utils/: FDMApproximation.cpp  FDMApproximation.h  FDMGrid.cpp  FDMGrid.h  FDMGridMPI.cpp  FDMGridMPI.h  Solvers.cpp  Solvers.h  SparseMatrix.cpp  SparseMatrix.h  TaskFunctions.cpp  TaskFunctions.h
